code smell lagi